2012-10-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_text):
	support combining characters

2012-10-09  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_combining): new function
	(avt_drawchar, avt_tell_len): adapted

	* lua/lua-avt.c (lavt_combining): new function

2012-10-08  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2c, rgb2c: fixed for new GAWK and improved

	* give all AWK scripts the file extension ".awk"

2012-10-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_drawchar, avt_show_text_cursor): simplify

2012-10-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c: start to migrate anything to 32bpp surfaces

	* avatar-sdl.c (avt_fill_area, avt_fill): new fuctions

	* avatar-sdl.c (avt_update_area): new fuction

2012-09-27  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_pager): do full garbage collection

	* lua/hexviewer.lua: new file

2012-09-25  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-sdl.c, audio-dummy.c (avt_set_audio_end_key):
	returns old value

	* audio-sdl.c (avt_start_audio, avt_stop_audio): reset audio_key

	* audio-sdl.c (avt_navigate): restore audio-end-key

	* lua/lua-avt.c (lavt_set_audio_end_key): new function

	* avatar-sdl.c (avt_set_pointer_motion_key, avt_get_pointer_position)
	(avt_set_pointer_buttons_key): new functions
	(avt_analyze_event): adapted

	* avatar-sdl.c (avt_choice): use only avt_key() for input

	* avatar-sdl.c (avt_check_buttons): returns boolean
	(avt_analyze_event): adapted

	* avatar-sdl.c (avt_wait_button): use avt_key()

2012-09-24  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-sdl.c, audio-dummy.c (avt_set_audio_end_key):
	new function
	(avt_wait_audio_end): adapted
	avatar-sdl.c (avt_navigate): adapted

2012-09-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_update): no delay anymore
